# cpp-nn

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
data/: lin_examples_1000_2  lin_labels_1000_2  poly_examples_1000_2  poly_labels_1000_2
data_generation/: linearly_separable.py  poly_separable.py
html/: _neuron_8h_source.html  annotated.html  class_neuron-members.html  class_neuron.html  class_neuron.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d9554fd111ff166a505d7566c3725590.html  dir_d9554fd111ff166a505d7566c3725590.js  files.html  functions.html  functions_func.html  index.html  navtreedata.js  navtreeindex0.js
html/search/: all_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
src/: CMakeLists.txt  main.cpp
src/enums/: Separability.cpp  Separability.h
src/foo/: Bar.cpp  Bar.h
src/functions/: ActivationFunction.h  SigmoidFunction.cpp  SigmoidFunction.h
src/io/: Dataset.cpp  Dataset.h  Input.cpp  Input.h  OneHotAdapter.cpp  OneHotAdapter.h  Output.cpp  Output.h  OutputAdapter.h
src/neural/: InputNeuron.cpp  InputNeuron.h  NeuralLayer.cpp  NeuralLayer.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h
src/neural/layers/: NeuralLayer.cpp  NeuralLayer.h  OutputLayer.cpp  OutputLayer.h
src/neurons/: Neuron.cpp  Neuron.h
tests/: CMakeLists.txt  dataset.cpp  gtest.cpp
tests/foo_tests/: bar.cpp
tests/neuron_tests/: neural_layer.cpp  neural_network.cpp  neuron.cpp
